--- a/html/member-pages/E-Brink.html
+++ b/html/member-pages/E-Brink.html
@@ -26,9 +26,9 @@
     <div class="inner-page-body">
         <h1>Hello, World! I'm E. Brink!</h1>
         <div id="about-links">
-          <a href="https://ebrink.online">Ebrink.Online</a></h3>
-          <a href="https://github.com/brinkbrink">Github</a>
-          <a href="https://www.linkedin.com/in/eebrink/">LinkedIn</a>
+          <a target="_blank" href="https://ebrink.online">Ebrink.Online</a></h3>
+          <a target="_blank" href="https://github.com/brinkbrink">Github</a>
+          <a target="_blank" href="https://www.linkedin.com/in/eebrink/">LinkedIn</a>
           </div>
         <img alt="photo of E. Brink" src="../../images/brink.jpg">
 
