--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seattle Central College Programming Club</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="./assets/ico/codingbrowser_102152.ico">
     <script src="./components/header/header.js" type="text/javascript" defer></script>
     <script src="./components/aside/aside.js" type="text/javascript" defer></script>
     <script src="./components/footer/footer.js" type="text/javascript" defer></script>
