--- a/html/member-pages/Evelyn.html
+++ b/html/member-pages/Evelyn.html
@@ -29,8 +29,10 @@
     <main>
       <div id="page-body">
         <!-- CHANGE FROM HERE -->
-        <h1>What is it?</h1>
-        <div id="inner-page-body" style="align-content: center">Okay</div>
+        <h1></h1>
+        <div id="inner-page-body" style="align-content: center">
+          <p>I will finish before 5PM, June 20.</p>
+        </div>
         <!-- TO HERE -->
       </div>
     </main>
