--- a/html/members.html
+++ b/html/members.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Seattle Central Programming Club</title>
-    <link rel="stylesheet" href="../../style.css">
-    <link rel="stylesheet" href="./members.css">
+    <link rel="stylesheet" href="../css/foundation.css">
+    <link rel="stylesheet" href="../css/members.css">
     <link rel="stylesheet" href="../css/navigation.css">
     <script src="../javascript/header.js" type="text/javascript" defer></script>
     <script src="../javascript/aside.js" type="text/javascript" defer></script>
@@ -22,7 +22,7 @@
         <div id="inner-page-body" style="align-content: center">
 
             <h1>2022 Members</h1>
-            <img class="pictures-of-members-togeter" src="../images/pictures_of_members_togeter.jpg" alt="Pictures of Members Togeter">
+            <img class="pictures-of-members-togeter" src="../images/pictures_of_members_together.jpg" alt="Pictures of Members Togeter">
 
             <div class="information">
                 <h2>Information Title</h2>
