Formatting quick fixes

--- a/home.html
+++ b/home.html
@@ -20,9 +20,9 @@
         <div id="page-body">
             <div id="inner-page-body" style="align-content: center">
                 <div style="padding-bottom: 30px; text-align: center">
-                    <h1 style="padding-bottom: 10px">Seattle Central College Programming Club</h1>
+                    <h1 style="padding-bottom: 10px" >Seattle Central College Programming Club</h1>
 
-                    <img src="images/pictures_of_members_together.jpg" alt="Club Members"/>
+                    <img src="images/SeattleCentralCollege.jpg" alt="Club Members" style="height: 100%; width: 100%; transform: translateY(0%)"/>
                 </div>
 
                 <div class="about">
