--- a/html/members.html
+++ b/html/members.html
@@ -3,12 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Seattle Central Programming Club</title>
-    <link rel="stylesheet" href="../css/foundation.css">
-    <link rel="stylesheet" href="../css/members.css">
-    <link rel="stylesheet" href="../css/navigation.css">
-    <script src="../javascript/header.js" type="text/javascript" defer></script>
-    <script src="../javascript/aside.js" type="text/javascript" defer></script>
-    <script src="../javascript/footer.js" type="text/javascript" defer></script>
 </head>
 <body>
 
@@ -21,60 +15,100 @@
         <!-- CHANGE FROM HERE -->
         <div id="inner-page-body" style="align-content: center">
 
-            <h1>2022 Members</h1>
-            <img class="pictures-of-members-togeter" src="../images/pictures_of_members_together.jpg" alt="Pictures of Members Togeter">
-
             <div class="information">
-                <h2>Information Title</h2>
-                <p>Information Paragraph</p>
+                <h2>Programming Club 2021-2022</h2>
             </div>
+            <img style="width: 100%; height: 100%; padding-bottom: 30px" class="pictures-of-members-together" src="../images/member-photos/GroupPhoto.jpeg" alt="Pictures of Members Together">
 
             <div class="members">
                 <!-- ONE MEMBER -->
                 <div class="member">
-                    <h3>Name</h3>
-                    <img src="../images/demo_members_image.jpeg" alt="members picture">
+                    <div class="member-name">
+                        <h3>Francisco Fonseca</h3>
+                        <h3>(President)</h3>
+                    </div>
+                    <img src="../images/member-photos/FonsecaFrancisco.jpeg" alt="Francisco Fonseca (President)">
                 </div>
                 <!-- ONE MEMBER -->
                 <div class="member">
-                    <h3>Name</h3>
-                    <img src="../images/demo_members_image.jpeg" alt="members picture">
+                    <div class="member-name">
+                        <h3>Daniel Johnson</h3>
+                        <h3>(Vice President)</h3>
+                    </div>
+                    <img src="../images/member-photos/JohnsonDaniel.jpeg" alt="Daniel Johnson">
                 </div>
                 <!-- ONE MEMBER -->
                 <div class="member">
-                    <h3>Name</h3>
-                    <img src="../images/demo_members_image.jpeg" alt="members picture">
+                    <div class="member-name">
+                        <h3>Stephen Cushing</h3>
+                        <h3>(General Member)</h3>
+                    </div>
+                    <img src="../images/member-photos/CushingStephen.jpg" alt="Stephen Cushing">
                 </div>
                 <!-- ONE MEMBER -->
                 <div class="member">
-                    <h3>Name</h3>
-                    <img src="../images/demo_members_image.jpeg" alt="members picture">
+                    <div class="member-name">
+                        <h3>Ted Miller</h3>
+                        <h3>(General Member)</h3>
+                    </div>
+                    <img src="../images/member-photos/MillerTed.jpeg" alt="members picture">
                 </div>
                 <!-- ONE MEMBER -->
                 <div class="member">
-                    <h3>Name</h3>
+                    <div class="member-name">
+                        <h3>Nhi Nguyen</h3>
+                        <h3>(General Member)</h3>
+                    </div>
+                    <img src="../images/member-photos/NhiNguyen.JPG" alt="members picture">
+                </div>
+                <!-- ONE MEMBER -->
+                <div class="member">
+                    <div class="member-name">
+                        <h3>Miho Suzuki</h3>
+                        <h3>(General Member)</h3>
+                    </div>
+                    <img src="../images/member-photos/SuzukiMiho.JPG" alt="members picture">
+                </div>
+                <!-- ONE MEMBER -->
+                <div class="member">
+                    <div class="member-name">
+                        <h3>Evelyn Huang</h3>
+                        <h3>(General Member)</h3>
+                    </div>
+                    <img src="../images/member-photos/HuangEvelyn.jpg" alt="members picture">
+                </div>
+                <!-- ONE MEMBER -->
+                <div class="member">
+                    <div class="member-name">
+                        <h3>Sara Lee</h3>
+                        <h3>(General Member)</h3>
+                    </div>
                     <img src="../images/demo_members_image2.jpg" alt="members picture">
                 </div>
                 <!-- ONE MEMBER -->
                 <div class="member">
-                    <h3>Name</h3>
+                    <div class="member-name">
+                        <h3>Emily Brinks</h3>
+                        <h3>(General Member)</h3>
+                    </div>
+                    <img src="../images/demo_members_image.jpeg" alt="members picture">
+                </div>
+                <!-- ONE MEMBER -->
+                <div class="member">
+                    <div class="member-name">
+                        <h3>Risa Ohtake</h3>
+                        <h3>(General Member)</h3>
+                    </div>
                     <img src="../images/demo_members_image2.jpg" alt="members picture">
                 </div>
                 <!-- ONE MEMBER -->
                 <div class="member">
-                    <h3>Name</h3>
-                    <img src="../images/demo_members_image2.jpg" alt="members picture">
+                    <div class="member-name">
+                        <h3>Noa Shiga</h3>
+                        <h3>(General Member)</h3>
+                    </div>
+                    <img src="../images/demo_members_image.jpeg" alt="members picture">
                 </div>
-            </div>
-
-            <h1>Past Members</h1>
-            <div class="past-members">
-                <ul>
-                    <li><a href="#">2021</a></li>
-                    <li><a href="#">2020</a></li>
-                    <li><a href="#">2019</a></li>
-                    <li><a href="#">2018</a></li>
-                </ul>
             </div>
 
         </div>
@@ -86,3 +120,9 @@
 
 </body>
 </html>
+<link rel="stylesheet" href="../css/foundation.css">
+<link rel="stylesheet" href="../css/members.css">
+<link rel="stylesheet" href="../css/navigation.css">
+<script src="../javascript/header.js" type="text/javascript" defer></script>
+<script src="../javascript/aside.js" type="text/javascript" defer></script>
+<script src="../javascript/footer.js" type="text/javascript" defer></script>
