--- a/html/contact.html
+++ b/html/contact.html
@@ -2,9 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Seattle Central Programming Club</title>
+    <link rel="stylesheet" href="../../css/foundation.css">
+    <link rel="stylesheet" href="../../css/navigation.css">
+    <script src="../../javascript/header.js" type="text/javascript" defer></script>
+    <script src="../../javascript/aside.js" type="text/javascript" defer></script>
+    <script src="../../javascript/footer.js" type="text/javascript" defer></script>
 </head>
 <body>
+
+<header-component></header-component>
+
+<aside-component></aside-component>
+
+<main>
+    <div id="page-body">
+        <!-- CHANGE FROM HERE -->
+        <div id="inner-page-body" style="align-content: center">
+
+            <h2>Send emails to programmingclub.scc@seattlecolleges.edu</h2>
+
+        </div>
+        <!-- TO HERE -->
+    </div>
+</main>
+
+<footer-component></footer-component>
 
 </body>
 </html>
