--- a/html/past-members.html
+++ b/html/past-members.html
@@ -125,6 +125,65 @@
                 </div>
 
 
+                <div class="grid-box">
+                    <div class = "name">
+                        <h4>Sara Lee</h4>
+                    </div>
+                    <div>
+                        <div class = "photo">
+                            <img src="../images/demo_members_image2.jpg" style="height: 100%; width: 100%">
+                        </div>
+                        <div class = "quote">
+                            <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="grid-box">
+                    <div class = "name">
+                        <h4>Emily Brinks</h4>
+                    </div>
+                    <div>
+                        <div class = "photo">
+                            <img src="../images/demo_members_image2.jpg" style="height: 100%; width: 100%">
+                        </div>
+                        <div class = "quote">
+                            <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="grid-box">
+                    <div class = "name">
+                        <h4>Risa Ohtake</h4>
+                    </div>
+                    <div>
+                        <div class = "photo">
+                            <img src="../images/demo_members_image2.jpg" style="height: 100%; width: 100%">
+                        </div>
+                        <div class = "quote">
+                            <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="grid-box">
+                    <div class = "name">
+                        <h4>Noa Shiga</h4>
+                    </div>
+                    <div>
+                        <div class = "photo">
+                            <img src="../images/demo_members_image2.jpg" style="height: 100%; width: 100%">
+                        </div>
+                        <div class = "quote">
+                            <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
