--- a/html/member-pages/FonsecaFrancisco.html
+++ b/html/member-pages/FonsecaFrancisco.html
@@ -19,9 +19,20 @@
     <div id="page-body">
         <!-- CHANGE FROM HERE -->
         <div id="inner-page-body" style="align-content: center">
-
-
-
+            <h4>Francisco Fonseca</h4>
+            <hr />
+            <img
+                    src="/assets/img/members/FonsecaFrancisco.jpeg"
+                    alt="Francisco Fonseca"
+            />
+            <p>
+                Hi, my name is Francisco Fonseca. I'm the current President of the
+                Programming Club. I'm studying Computer Engineering, with an
+                inclination to software development. Check my website to get to know
+                more about me!
+            </p>
+            <br />
+            <a href="https://www.franfonse.com" target="_blank">Check me out!</a>
         </div>
         <!-- TO HERE -->
     </div>
