Past Members Title Updates

--- a/html/past-members.html
+++ b/html/past-members.html
@@ -22,7 +22,8 @@
 <main>
     <div id="page-body">
         <div id="inner-page-body" style="align-content: center">
-            <h1>Past Members</h1>
+            <h1 style="text-align: center; border-bottom: black solid 4px; padding-bottom: 10px">Past Members</h1>
+            <h2 style="text-align: center; padding-top: 90px">2021 - 2022</h2>
             <div class = "grid-gap">
 
             </div>
