Emily Brink Links

--- a/html/members.html
+++ b/html/members.html
@@ -91,7 +91,7 @@
                         <h3>Emily Brinks</h3>
                         <h3>(General Member)</h3>
                     </div>
-                    <img src="../images/demo_members_image.jpeg" alt="members picture">
+                    <img src="../images/member-photos/BrinksEmily.jpg" alt="members picture">
                 </div>
                 <!-- ONE MEMBER -->
                 <div class="member">
