--- a/html/past-members.html
+++ b/html/past-members.html
@@ -146,9 +146,11 @@
                         <h4>Emily Brinks</h4>
                     </div>
                     <div>
-                        <div class = "photo">
-                            <img src="../images/demo_members_image2.jpg" style="height: 100%; width: 100%">
-                        </div>
+                        <a href="../html/member-pages/BrinksEmily.html">
+                            <div class = "photo">
+                                <img src="../images/member-photos/BrinksEmily.jpg" style="height: 100%; width: 100%">
+                            </div>
+                        </a>
                         <div class = "quote">
                             <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
                         </div>
