Tidying up Francisco's Page

--- a/html/member-pages/FonsecaFrancisco.html
+++ b/html/member-pages/FonsecaFrancisco.html
@@ -18,20 +18,22 @@
 <main>
     <div id="page-body">
         <!-- CHANGE FROM HERE -->
-        <div id="inner-page-body" style="align-content: center">
-            <h4>Francisco Fonseca</h4>
-            <hr />
-            <img
-                    src="/assets/img/members/FonsecaFrancisco.jpeg"
-                    alt="Francisco Fonseca"
-            />
-            <p>
-                Hi, my name is Francisco Fonseca. I'm the current President of the
-                Programming Club. I'm studying Computer Engineering, with an
-                inclination to software development. Check my website to get to know
-                more about me!
-            </p>
-            <br />
+        <div id="inner-page-body" style="text-align: center;">
+            <h4 style="padding-bottom: 30px">Francisco Fonseca</h4>
+            <div style="flex-flow: row">
+                <img
+                        src="../../images/member-photos/FonsecaFrancisco.jpeg"
+                        alt="Francisco Fonseca"
+                        style="width: 30vh; height: 30vh; padding-bottom: 30px"
+                />
+                <p>
+                    Hi, my name is Francisco Fonseca. I'm the current President of the
+                    Programming Club. I'm studying Computer Engineering, with an
+                    inclination to software development. Check my website to get to know
+                    more about me!
+                </p>
+                <br />
+            </div>
             <a href="https://www.franfonse.com" target="_blank">Check me out!</a>
         </div>
         <!-- TO HERE -->
