Various Member Page Fixes

--- a/html/2021-2022members.html
+++ b/html/2021-2022members.html
@@ -33,7 +33,7 @@
                         <h3>Francisco Fonseca</h3>
                         <h3>(President)</h3>
                     </div>
-                    <img src="../images/member-photos/FonsecaFrancisco.jpeg" alt="Francisco Fonseca (President)">
+                    <a href="member-pages/FonsecaFrancisco.html"><img src="../images/member-photos/FonsecaFrancisco.jpeg" alt="Francisco Fonseca (President)"></a>
                 </div>
                 <!-- ONE MEMBER -->
                 <div class="member">
@@ -41,7 +41,7 @@
                         <h3>Daniel Johnson</h3>
                         <h3>(Vice President)</h3>
                     </div>
-                    <img src="../images/member-photos/JohnsonDaniel.jpeg" alt="Daniel Johnson">
+                    <a href="member-pages/JohnsonDaniel.html"><img src="../images/member-photos/JohnsonDaniel.jpeg" alt="Daniel Johnson"></a>
                 </div>
                 <!-- ONE MEMBER -->
                 <div class="member">
@@ -49,7 +49,7 @@
                         <h3>Stephen Cushing</h3>
                         <h3>(General Member)</h3>
                     </div>
-                    <img src="../images/member-photos/CushingStephen.jpg" alt="Stephen Cushing">
+                    <a href="member-pages/stephen-cushing.html"><img src="../images/member-photos/CushingStephen.jpg" alt="Stephen Cushing"></a>
                 </div>
                 <!-- ONE MEMBER -->
                 <div class="member">
@@ -73,7 +73,7 @@
                         <h3>Miho Suzuki</h3>
                         <h3>(General Member)</h3>
                     </div>
-                    <img src="../images/member-photos/SuzukiMiho.JPG" alt="members picture">
+                    <a href="member-pages/MihoSuzuki.html"><img src="../images/member-photos/SuzukiMiho.JPG" alt="members picture"></a>
                 </div>
                 <!-- ONE MEMBER -->
                 <div class="member">
@@ -81,7 +81,7 @@
                         <h3>Evelyn Huang</h3>
                         <h3>(General Member)</h3>
                     </div>
-                    <img src="../images/member-photos/HuangEvelyn.jpg" alt="members picture">
+                    <a href="member-pages/Evelyn.html"><img src="../images/member-photos/HuangEvelyn.jpg" alt="members picture"></a>
                 </div>
                 <!-- ONE MEMBER -->
                 <div class="member">
@@ -89,7 +89,7 @@
                         <h3>Sara Lee</h3>
                         <h3>(General Member)</h3>
                     </div>
-                    <img src="../images/demo_members_image2.jpg" alt="members picture">
+                    <a href="member-pages/SooBinLee.html"><img src="../images/demo_members_image2.jpg" alt="members picture"></a>
                 </div>
                 <!-- ONE MEMBER -->
                 <div class="member">
@@ -97,7 +97,7 @@
                         <h3>Emily Brinks</h3>
                         <h3>(General Member)</h3>
                     </div>
-                    <img src="../images/member-photos/BrinksEmily.jpg" alt="members picture">
+                    <a href="member-pages/BrinksEmily.html"><img src="../images/member-photos/BrinksEmily.jpg" alt="members picture"></a>
                 </div>
                 <!-- ONE MEMBER -->
                 <div class="member">
