--- a/html/member-pages/Evelyn.html
+++ b/html/member-pages/Evelyn.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>Seattle Central Programming Club</title>
+    <link rel="stylesheet" href="/css/member-pages/Evelyn.css" />
     <link rel="stylesheet" href="../../css/foundation.css" />
     <link rel="stylesheet" href="../../css/navigation.css" />
-    <link rel="stylesheet" href="/css/member-pages/Evelyn.css" />
     <script
       src="../../javascript/header.js"
       type="text/javascript"
@@ -35,7 +35,7 @@
             I am <span style="font-size: 150%; text-shadow: 5px 4px 1px rgba(191, 144, 144, 0.855);">
              Yanlin Huang</span>.&#10024</h2>
           <article class="box">
-            <img src="/images/member-photos/EvelynPhoto/EvelynPortrait.jpg" alt="Yanlin's Portrait">
+            <img style="float: right; margin-left: 8%" src="/images/member-photos/EvelynPhoto/EvelynPortrait.jpg" alt="Yanlin's Portrait">
             <p style="margin: 8%">
               Welcome to my very first web page! 
               Here you will get to know me and my passion to the world. 
@@ -53,7 +53,7 @@
               I am currently working for Student Government and Tutoring Center at South Seattle College.
             </p>
             <p>
-              My Myers–Briggs Type is <a href="https://www.16personalities.com/entp-personality">Debator<small> (ENTP)</small></a>. My motto is <q>Seize the day!</q>. 
+              My Myers–Briggs Type is <a style="color: blue" href="https://www.16personalities.com/entp-personality">Debator<small> (ENTP)</small></a>. My motto is <q>Seize the day!</q>.
               I am relatively optimistic. I believe that technology and social science can preserve our environment and humanity and make the world better. 
               Therefore, I hope to earn a doctorate in science and research in human-centered technology.
             </p>
@@ -83,8 +83,8 @@
           </article>
           <article>
             <ul>
-              <li><b>Email:</b><a href="mailto: snowevelyn666@gmail.com"> snowevelyn666@gmail.com</a></li>
-              <li><b>Social Media:</b><a href="https://www.instagram.com/14.23908850/"> Instagram</a></li>
+              <li><b>Email:</b><a style="color: blue" href="mailto: snowevelyn666@gmail.com"> snowevelyn666@gmail.com</a></li>
+              <li><b>Social Media:</b><a style="color: blue" href="https://www.instagram.com/14.23908850/"> Instagram</a></li>
             </ul>
           </article>
         </div>
