--- a/html/member-pages/JohnsonDaniel.html
+++ b/html/member-pages/JohnsonDaniel.html
@@ -18,14 +18,14 @@
 <main>
     <div id="page-body">
         <!-- CHANGE FROM HERE -->
-        <div id="inner-page-body" style="align-content: center">
-            <h1>Daniel Johnson</h1>
-
-            <img src = "/images/member-photos/JohnsonDaniel.jpeg" style="height: 40%; width: 40%">
-
+        <div id="inner-page-body" style="text-align: center;">
+            <div>
+                <h1>Daniel Johnson</h1>
+                <img src = "/images/member-photos/JohnsonDaniel.jpeg" alt="Daniel Johnson's Picture" style="height: 40%; width: 40%; text-align: center">
+            </div>
             <h2 style = "justify-content: center">About Me:</h2>
 
-            <p style="margin-top: 2vh">
+            <p style="margin-top: 2vh; text-align: left">
                 I grew up in Kodiak, Alaska and started my computer science journey during the senior year of high
                 school. I enrolled in an applied engineering class partnered with a program called “A World Bridge”
                 which was also partnered with NASA Ames Research Center. During my year with the program I learned about
@@ -36,7 +36,7 @@
                 year, they offered me a summer intern position for NASA Ames Research Center. I promptly accepted and
                 started work on the NASA CitySmart WorldWise project.
             </p>
-            <p style="margin-top: 2vh">
+            <p style="margin-top: 2vh; text-align: left">
                 After interning with NASA Ames Research center, I headed off to college. At the University of Alaska
                 Anchorage, I started off as a biology major, but I quickly realized my interest in Computer Science far
                 outshined the former and changed my major accordingly. I have been studying Computer Science in school
@@ -44,7 +44,7 @@
                 Associate of Science at Seattle Central College in the Spring of 2022 and move on to the University of
                 Washington's Paul Allen School of Computer Science and Engineering in the Fall.
             </p>
-            <p style="margin-top: 2vh">
+            <p style="margin-top: 2vh; text-align: left">
                 In addition to my studies, I have joined various clubs such as the Seattle Central's Programming Club
                 and Rocket Club.
             </p>
