--- a/html/member-pages/SooBinLee.html
+++ b/html/member-pages/SooBinLee.html
@@ -20,7 +20,7 @@
     <!-- CHANGE FROM HERE -->
     <div id="inner-page-body" style="align-content: center">
 
-      <img src="../../images/member-photos/SoobinPhoto/tofifunny.jpg">
+      <img src="../../images/member-photos/SoobinPhoto/tofifunny.jpg" alt="Funny Cat Pic, Meow" style="height: 100%; width: 100%">
 
     </div>
     <!-- TO HERE -->
