--- a/html/past-members.html
+++ b/html/past-members.html
@@ -23,6 +23,8 @@
     <div id="page-body">
         <div id="inner-page-body" style="align-content: center">
             <h1 style="text-align: center; border-bottom: black solid 4px; padding-bottom: 10px">Past Members</h1>
+            <p style="text-align: center; padding-top: 10px"> (You can navigate to a member's personal page by clicking their photo!)</p>
+
             <h2 style="text-align: center; padding-top: 90px">2021 - 2022</h2>
             <div class = "grid-gap">
 
@@ -101,9 +103,11 @@
                         <h4>Miho Suzuki</h4>
                     </div>
                     <div>
-                        <div class = "photo">
-                            <img src="../images/member-photos/SuzukiMiho.JPG" style="height: 100%; width: 100%">
-                        </div>
+                        <a href="./member-pages/MihoSuzuki.html">
+                            <div class = "photo">
+                                <img src="../images/member-photos/SuzukiMiho.JPG" style="height: 100%; width: 100%">
+                            </div>
+                        </a>
                         <div class = "quote">
                             <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
                         </div>
@@ -132,7 +136,7 @@
                     </div>
                     <div>
                         <div class = "photo">
-                            <img src="../images/demo_members_image2.jpg" style="height: 100%; width: 100%">
+                            <a href="member-pages/SooBinLee.html"><img src="../images/demo_members_image2.jpg" style="height: 100%; width: 100%"></a>
                         </div>
                         <div class = "quote">
                             <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
@@ -149,6 +153,23 @@
                         <a href="../html/member-pages/BrinksEmily.html">
                             <div class = "photo">
                                 <img src="../images/member-photos/BrinksEmily.jpg" style="height: 100%; width: 100%">
+                            </div>
+                        </a>
+                        <div class = "quote">
+                            <p1>"With great power, comes fat stacks" - Sun Tzu (probably)</p1>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="grid-box">
+                    <div class = "name">
+                        <h4>Evelyn Huang</h4>
+                    </div>
+                    <div>
+                        <a href="../html/member-pages/Evelyn.html">
+                            <div class = "photo">
+                                <img src="../images/member-photos/HuangEvelyn.jpg" style="height: 100%; width: 100%">
                             </div>
                         </a>
                         <div class = "quote">
@@ -186,6 +207,7 @@
                         </div>
                     </div>
                 </div>
+
 
             </div>
         </div>
