--- a/html/member-pages/MihoSuzuki.html
+++ b/html/member-pages/MihoSuzuki.html
@@ -5,36 +5,10 @@
     <title>Seattle Central Programming Club</title>
     <link rel="stylesheet" href="../../css/foundation.css">
     <link rel="stylesheet" href="../../css/navigation.css">
+    <link rel="stylesheet" href="../../css/member-pages/SuzukiMiho.css">
     <script src="../../javascript/header.js" type="text/javascript" defer></script>
     <script src="../../javascript/aside.js" type="text/javascript" defer></script>
     <script src="../../javascript/footer.js" type="text/javascript" defer></script>
-    <style>
-        img {
-            max-width: 40%;
-            margin: 0.7em auto;
-        }
-
-        h1, h2 {
-            margin: 0.7em 0;
-        }
-
-        .pastwork {
-            display: flex;
-            align-items: left;
-            flex-direction: column;
-        }
-
-        .pastwork ul {
-            list-style: disc;
-            padding-left: 15px;
-            margin-top: 0;
-            margin-left: 4%;
-        }
-
-        .pastwork li {
-            padding-bottom: 2%;
-        }
-    </style>
 </head>
 <body>
 
@@ -50,23 +24,22 @@
             <img src="../../images/member-photos/SuzukiMiho.JPG" alt="miho's picture">
             
             <h2>About</h2>
-            <p>Hello.<br>
-            Welcome to my my portal page! My name is Miho Suzuki.<br>
+            <p>Hello, welcome to my portal page! My name is Miho Suzuki.<br><br>
             I'm an international student from Japan. I was a student of Japanese university, and my major was economic. However, I realized that my interest was not economics but computer programming. So I decided to come here and study computer science.<br>
-            And of course, I enjoy it!</p>
+            <br> And of course, I enjoy it!</p>
 
             <h2>Past Work</h2>
             <div class="pastwork">
                 <ul>
-                    <li><a href="http://oshishikakatan.com/it261/">IT261 - W22 - Web App Programming 1</a></li>
+                    <li><a style="color:black" href="http://oshishikakatan.com/it261/">IT261 - W22 - Web App Programming 1</a></li>
                 </ul>
             </div>
 
             <h2>SNS</h2>
             <div class="pastwork">
                 <ul>
-                    <li><a href="https://www.facebook.com/profile.php?id=100044598711987">Facebook</a></li>
-                    <li><a href="https://www.instagram.com/mmmmiho0112">Instagram</a></li>
+                    <li><a style="color:black" href="https://www.facebook.com/profile.php?id=100044598711987">Facebook</a></li>
+                    <li><a style="color:black" href="https://www.instagram.com/mmmmiho0112">Instagram</a></li>
                 </ul>
             </div>
         </div>
